[gd_scene load_steps=152 format=2]

[ext_resource path="res://City.gd" type="Script" id=1]
[ext_resource path="res://Skullsprite.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/cityicons/ICONS-13.png" type="Texture" id=3]
[ext_resource path="res://assets/assets_new/quickgrab/diamond_diamond.png" type="Texture" id=4]
[ext_resource path="res://assets/assets_new/Square.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/sounds/explosion.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/last/death/death/death_00000.png" type="Texture" id=7]
[ext_resource path="res://assets/last/death/death/death_00001.png" type="Texture" id=8]
[ext_resource path="res://assets/last/death/death/death_00002.png" type="Texture" id=9]
[ext_resource path="res://assets/last/death/death/death_00003.png" type="Texture" id=10]
[ext_resource path="res://assets/last/death/death/death_00004.png" type="Texture" id=11]
[ext_resource path="res://assets/last/death/death/death_00005.png" type="Texture" id=12]
[ext_resource path="res://assets/last/death/death/death_00006.png" type="Texture" id=13]
[ext_resource path="res://assets/last/death/death/death_00007.png" type="Texture" id=14]
[ext_resource path="res://assets/last/death/death/death_00008.png" type="Texture" id=15]
[ext_resource path="res://assets/last/death/death/death_00009.png" type="Texture" id=16]
[ext_resource path="res://assets/last/death/death/death_00010.png" type="Texture" id=17]
[ext_resource path="res://assets/last/death/death/death_00011.png" type="Texture" id=18]
[ext_resource path="res://assets/last/death/death/death_00012.png" type="Texture" id=19]
[ext_resource path="res://assets/last/death/death/death_00013.png" type="Texture" id=20]
[ext_resource path="res://assets/last/death/death/death_00014.png" type="Texture" id=21]
[ext_resource path="res://assets/last/death/death/death_00015.png" type="Texture" id=22]
[ext_resource path="res://assets/last/death/death/death_00016.png" type="Texture" id=23]
[ext_resource path="res://assets/last/death/death/death_00017.png" type="Texture" id=24]
[ext_resource path="res://assets/last/death/death/death_00018.png" type="Texture" id=25]
[ext_resource path="res://assets/last/death/death/death_00019.png" type="Texture" id=26]
[ext_resource path="res://assets/last/death/death/death_00020.png" type="Texture" id=27]
[ext_resource path="res://assets/last/death/death/death_00021.png" type="Texture" id=28]
[ext_resource path="res://assets/last/death/death/death_00022.png" type="Texture" id=29]
[ext_resource path="res://assets/last/death/death/death_00023.png" type="Texture" id=30]
[ext_resource path="res://assets/last/death/death/death_00024.png" type="Texture" id=31]
[ext_resource path="res://assets/last/death/death/death_00025.png" type="Texture" id=32]
[ext_resource path="res://assets/last/death/death/death_00026.png" type="Texture" id=33]
[ext_resource path="res://assets/last/death/death/death_00027.png" type="Texture" id=34]
[ext_resource path="res://assets/last/death/death/death_00028.png" type="Texture" id=35]
[ext_resource path="res://assets/last/death/death/death_00029.png" type="Texture" id=36]
[ext_resource path="res://assets/last/death/death/death_00030.png" type="Texture" id=37]
[ext_resource path="res://assets/last/death/death/death_00031.png" type="Texture" id=38]
[ext_resource path="res://assets/last/death/death/death_00032.png" type="Texture" id=39]
[ext_resource path="res://assets/last/death/death/death_00033.png" type="Texture" id=40]
[ext_resource path="res://assets/last/death/death/death_00034.png" type="Texture" id=41]
[ext_resource path="res://assets/last/death/death/death_00035.png" type="Texture" id=42]
[ext_resource path="res://assets/last/death/death/death_00036.png" type="Texture" id=43]
[ext_resource path="res://assets/last/death/death/death_00037.png" type="Texture" id=44]
[ext_resource path="res://assets/last/death/death/death_00038.png" type="Texture" id=45]
[ext_resource path="res://assets/last/death/death/death_00039.png" type="Texture" id=46]
[ext_resource path="res://assets/last/death/death/death_00040.png" type="Texture" id=47]
[ext_resource path="res://assets/last/death/death/death_00041.png" type="Texture" id=48]
[ext_resource path="res://assets/last/death/death/death_00042.png" type="Texture" id=49]
[ext_resource path="res://assets/last/death/death/death_00043.png" type="Texture" id=50]
[ext_resource path="res://assets/last/death/death/death_00044.png" type="Texture" id=51]
[ext_resource path="res://assets/last/death/death/death_00045.png" type="Texture" id=52]
[ext_resource path="res://assets/last/death/death/death_00046.png" type="Texture" id=53]
[ext_resource path="res://assets/last/death/death/death_00047.png" type="Texture" id=54]
[ext_resource path="res://assets/last/death/death/death_00048.png" type="Texture" id=55]
[ext_resource path="res://assets/last/death/death/death_00049.png" type="Texture" id=56]
[ext_resource path="res://assets/last/death/death/death_00050.png" type="Texture" id=57]
[ext_resource path="res://assets/last/death/death/death_00051.png" type="Texture" id=58]
[ext_resource path="res://assets/last/death/death/death_00052.png" type="Texture" id=59]
[ext_resource path="res://assets/last/death/death/death_00053.png" type="Texture" id=60]
[ext_resource path="res://assets/last/death/death/death_00054.png" type="Texture" id=61]
[ext_resource path="res://assets/last/death/death/death_00055.png" type="Texture" id=62]
[ext_resource path="res://assets/last/death/death/death_00056.png" type="Texture" id=63]
[ext_resource path="res://assets/last/death/death/death_00057.png" type="Texture" id=64]
[ext_resource path="res://assets/last/death/death/death_00058.png" type="Texture" id=65]
[ext_resource path="res://assets/last/death/death/death_00059.png" type="Texture" id=66]
[ext_resource path="res://assets/last/death/death/death_00060.png" type="Texture" id=67]
[ext_resource path="res://assets/last/death/death/death_00061.png" type="Texture" id=68]
[ext_resource path="res://assets/last/death/death/death_00062.png" type="Texture" id=69]
[ext_resource path="res://assets/last/death/death/death_00063.png" type="Texture" id=70]
[ext_resource path="res://assets/last/death/death/death_00064.png" type="Texture" id=71]
[ext_resource path="res://assets/last/death/death/death_00065.png" type="Texture" id=72]
[ext_resource path="res://assets/last/death/death/death_00066.png" type="Texture" id=73]
[ext_resource path="res://assets/last/death/death/death_00067.png" type="Texture" id=74]
[ext_resource path="res://assets/last/death/death/death_00068.png" type="Texture" id=75]
[ext_resource path="res://assets/last/death/death/death_00069.png" type="Texture" id=76]
[ext_resource path="res://assets/last/death/death/death_00070.png" type="Texture" id=77]
[ext_resource path="res://assets/last/death/death/death_00071.png" type="Texture" id=78]
[ext_resource path="res://assets/last/death/death/death_00072.png" type="Texture" id=79]
[ext_resource path="res://assets/last/death/death/death_00073.png" type="Texture" id=80]
[ext_resource path="res://assets/last/death/death/death_00074.png" type="Texture" id=81]
[ext_resource path="res://assets/last/death/death/death_00075.png" type="Texture" id=82]
[ext_resource path="res://assets/last/death/death/death_00076.png" type="Texture" id=83]
[ext_resource path="res://assets/last/death/death/death_00077.png" type="Texture" id=84]
[ext_resource path="res://assets/last/death/death/death_00078.png" type="Texture" id=85]
[ext_resource path="res://assets/last/death/death/death_00079.png" type="Texture" id=86]
[ext_resource path="res://assets/last/death/death/death_00080.png" type="Texture" id=87]
[ext_resource path="res://assets/last/death/death/death_00081.png" type="Texture" id=88]
[ext_resource path="res://assets/last/death/death/death_00082.png" type="Texture" id=89]
[ext_resource path="res://assets/last/death/death/death_00083.png" type="Texture" id=90]
[ext_resource path="res://assets/last/death/death/death_00084.png" type="Texture" id=91]
[ext_resource path="res://assets/last/death/death/death_00085.png" type="Texture" id=92]
[ext_resource path="res://assets/last/death/death/death_00086.png" type="Texture" id=93]
[ext_resource path="res://assets/last/death/death/death_00087.png" type="Texture" id=94]
[ext_resource path="res://assets/last/death/death/death_00088.png" type="Texture" id=95]
[ext_resource path="res://assets/last/death/death/death_00089.png" type="Texture" id=96]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00001.png" type="Texture" id=97]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00017.png" type="Texture" id=98]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00018.png" type="Texture" id=99]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00019.png" type="Texture" id=100]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00020.png" type="Texture" id=101]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00021.png" type="Texture" id=102]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00022.png" type="Texture" id=103]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00023.png" type="Texture" id=104]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00024.png" type="Texture" id=105]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00025.png" type="Texture" id=106]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00026.png" type="Texture" id=107]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00027.png" type="Texture" id=108]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00028.png" type="Texture" id=109]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00029.png" type="Texture" id=110]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00030.png" type="Texture" id=111]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00031.png" type="Texture" id=112]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00032.png" type="Texture" id=113]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00033.png" type="Texture" id=114]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00034.png" type="Texture" id=115]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00035.png" type="Texture" id=116]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00036.png" type="Texture" id=117]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00037.png" type="Texture" id=118]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00038.png" type="Texture" id=119]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00039.png" type="Texture" id=120]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00040.png" type="Texture" id=121]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00041.png" type="Texture" id=122]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00042.png" type="Texture" id=123]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00043.png" type="Texture" id=124]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00044.png" type="Texture" id=125]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00045.png" type="Texture" id=126]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00046.png" type="Texture" id=127]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00047.png" type="Texture" id=128]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00048.png" type="Texture" id=129]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00049.png" type="Texture" id=130]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00050.png" type="Texture" id=131]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00051.png" type="Texture" id=132]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00052.png" type="Texture" id=133]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00053.png" type="Texture" id=134]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00054.png" type="Texture" id=135]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00055.png" type="Texture" id=136]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00056.png" type="Texture" id=137]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00057.png" type="Texture" id=138]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00058.png" type="Texture" id=139]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00059.png" type="Texture" id=140]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00060.png" type="Texture" id=141]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00061.png" type="Texture" id=142]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00062.png" type="Texture" id=143]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00063.png" type="Texture" id=144]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00064.png" type="Texture" id=145]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00065.png" type="Texture" id=146]
[ext_resource path="res://assets/assets_new/quickgrab/another/citykill/citykill/citykill_00066.png" type="Texture" id=147]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 10.0

[sub_resource type="DynamicFont" id=2]

size = 9
use_mipmaps = false
use_filter = false
font_data = ExtResource( 5 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="SpriteFrames" id=3]

animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 28 ), ExtResource( 29 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 34 ), ExtResource( 35 ), ExtResource( 36 ), ExtResource( 37 ), ExtResource( 38 ), ExtResource( 39 ), ExtResource( 40 ), ExtResource( 41 ), ExtResource( 42 ), ExtResource( 43 ), ExtResource( 44 ), ExtResource( 45 ), ExtResource( 46 ), ExtResource( 47 ), ExtResource( 48 ), ExtResource( 49 ), ExtResource( 50 ), ExtResource( 51 ), ExtResource( 52 ), ExtResource( 53 ), ExtResource( 54 ), ExtResource( 55 ), ExtResource( 56 ), ExtResource( 57 ), ExtResource( 58 ), ExtResource( 59 ), ExtResource( 60 ), ExtResource( 61 ), ExtResource( 62 ), ExtResource( 63 ), ExtResource( 64 ), ExtResource( 65 ), ExtResource( 66 ), ExtResource( 67 ), ExtResource( 68 ), ExtResource( 69 ), ExtResource( 70 ), ExtResource( 71 ), ExtResource( 72 ), ExtResource( 73 ), ExtResource( 74 ), ExtResource( 75 ), ExtResource( 76 ), ExtResource( 77 ), ExtResource( 78 ), ExtResource( 79 ), ExtResource( 80 ), ExtResource( 81 ), ExtResource( 82 ), ExtResource( 83 ), ExtResource( 84 ), ExtResource( 85 ), ExtResource( 86 ), ExtResource( 87 ), ExtResource( 88 ), ExtResource( 89 ), ExtResource( 90 ), ExtResource( 91 ), ExtResource( 92 ), ExtResource( 93 ), ExtResource( 94 ), ExtResource( 95 ), ExtResource( 96 ) ],
"loop": true,
"name": "alt",
"speed": 5.0
}, {
"frames": [ ExtResource( 97 ), ExtResource( 98 ), ExtResource( 99 ), ExtResource( 100 ), ExtResource( 101 ), ExtResource( 102 ), ExtResource( 103 ), ExtResource( 104 ), ExtResource( 105 ), ExtResource( 106 ), ExtResource( 107 ), ExtResource( 108 ), ExtResource( 109 ), ExtResource( 110 ), ExtResource( 111 ), ExtResource( 112 ), ExtResource( 113 ), ExtResource( 114 ), ExtResource( 115 ), ExtResource( 116 ), ExtResource( 117 ), ExtResource( 118 ), ExtResource( 119 ), ExtResource( 120 ), ExtResource( 121 ), ExtResource( 122 ), ExtResource( 123 ), ExtResource( 124 ), ExtResource( 125 ), ExtResource( 126 ), ExtResource( 127 ), ExtResource( 128 ), ExtResource( 129 ), ExtResource( 130 ), ExtResource( 131 ), ExtResource( 132 ), ExtResource( 133 ), ExtResource( 134 ), ExtResource( 135 ), ExtResource( 136 ), ExtResource( 137 ), ExtResource( 138 ), ExtResource( 139 ), ExtResource( 140 ), ExtResource( 141 ), ExtResource( 142 ), ExtResource( 143 ), ExtResource( 144 ), ExtResource( 145 ), ExtResource( 146 ), ExtResource( 147 ) ],
"loop": false,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="Animation" id=4]

resource_name = "citybuild"
length = 2.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.6, 2 ),
"transitions": PoolRealArray( 1, 1, 1, -4 ),
"update": 0,
"values": [ Vector2( 0.1, 0.1 ), Vector2( 0.2, 0.2 ), Vector2( 1.4, 1.4 ), Vector2( 1, 1 ) ]
}

[node name="City" type="StaticBody2D"]

scale = Vector2( 0.1, 0.1 )
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "Visibility", "Z Index" ]
Skull = ExtResource( 2 )
population = 1000

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

scale = Vector2( 0.3, 0.3 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

visible = false
texture = ExtResource( 3 )

[node name="Muzzle" type="Position2D" parent="." index="2"]

[node name="HP" type="TextureProgress" parent="." index="3"]

modulate = Color( 1, 1, 1, 0.469608 )
show_behind_parent = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -23.0
margin_top = -23.0
margin_right = 24.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 0.0
exp_edit = false
rounded = false
texture_under = null
texture_over = null
texture_progress = ExtResource( 4 )
fill_mode = 3
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
_sections_unfolded = [ "Anchor", "Margin", "Textures", "Visibility" ]

[node name="Pop_count" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 10.0
margin_top = 14.0
margin_right = 50.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Anchor", "custom_fonts" ]

[node name="Kaboom" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 6 )
volume_db = -6.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="citydeath" type="AnimatedSprite" parent="." index="6"]

scale = Vector2( 0.75, 0.75 )
frames = SubResource( 3 )
animation = "default"
_sections_unfolded = [ "Transform", "Z Index" ]
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="7"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/citybuild = SubResource( 4 )
blend_times = [  ]

[node name="citydelayer" type="Timer" parent="." index="8"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="popcatch" type="Timer" parent="." index="9"]

process_mode = 1
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="cityinitial" from="." to="." method="_on_cityinitial"]

[connection signal="cityinitialcancel" from="." to="." method="_on_City_cityinitialcancel"]

[connection signal="progress_update" from="." to="." method="_update_progress"]

[connection signal="animation_finished" from="citydeath" to="." method="_on_citydeath_animation_finished"]

[connection signal="timeout" from="citydelayer" to="." method="_on_citydelayer_timeout"]

[connection signal="timeout" from="popcatch" to="." method="_on_popcatch_timeout"]


